# publec

./: # Portfolio laboratoire développeur publ.md  .gitignore  README.md  Untitled-2026-03-19-1518.excalidraw  backend-fastapi.yml  db-postgres.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-compose_nginx.yml  erase_all.sh  inception.yml  neuneu.yml  new_specs.md
Documentation/: new_specs.md
backend-fastapi/: Dockerfile  pyproject.toml
certs/: local.crt  local.key
frontend-nextjs/: AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  next.config.ts  package-lock.json  package.json  tasks.md
frontend-nextjs/app/: globals.css  layout.js  layout.tsx  page.js  page.module.css  page.tsx
frontend-nextjs/app/a-propos/: TimelineSection.tsx  page.tsx
frontend-nextjs/app/components/ContactForm/: ContactForm.module.css  ContactForm.tsx
frontend-nextjs/app/components/Footer/: Footer.tsx
frontend-nextjs/app/components/Navigation/: Navigation.tsx
frontend-nextjs/app/contact/: ContactForm.tsx  contactFormSchema.ts  page.module.css  page.tsx
frontend-nextjs/app/projets/: page.module.css  page.tsx
frontend-nextjs/app/utils/: markdown_manager.ts
frontend-nextjs/data/: projects.json
frontend-nextjs/public/logos/: list_logo.json
nextjs/: Dockerfile
nginx/: nginx.conf
nginx/conf.d/: default.conf
safety/frontend-nextjs/: package-lock.json  package.json
safety/frontend-nextjs/app/: globals.css  page.tsx
safety/frontend-nextjs/data/: projects.json
safety/frontend-nextjs/public/: accueil.json
(+63 files in other folders)
