[project]
name = "backend-fastapi"
version = "0.1.0"
description = "FastAPI backend (Postgres)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "psycopg[binary]>=3.1",
  "sqlalchemy>=2.0",
  # "pydantic-settings>=2.2",
  "alembic>=1.13",
]